# gdr-cli

./: .editorconfig  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: AGENTS_SECTION.md  SKILL.md
data/plans/: 2026-04-14-chat-sessions.md  2026-04-14-gdr-cli-rewrite.md  2026-04-15-deep-research-fallback.md
data/references/: command_reference.md  troubleshooting.md  workflows.md
data/specs/: 2026-04-14-gdr-cli-rewrite-design.md
src/: auth.py  cdp.py  chat.py  cli.py  config.py  exceptions.py  repl.py  research.py
src/gdr/: auth.py  cdp.py  chat.py  cli.py  exceptions.py  repl.py  research.py
src/gdr_cli/: auth.py  cdp.py  chat.py  cli.py  config.py  repl.py  research.py
tests/: test_auth.py  test_cdp.py  test_chat.py  test_cli.py  test_config.py  test_exceptions.py  test_repl.py  test_research.py
