[project]
name = "gdr-cli"
version = "0.1.0"
description = "Gemini Deep Research CLI — HTTP-based, shares auth with nlm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gemini-webapi>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "websocket-client>=1.0.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
gdr = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
