[project]
name = "gdr-cli"
version = "0.1.0"
description = "Gemini Deep Research CLI — HTTP-based, shares auth with nlm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gemini-webapi>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "websocket-client>=1.0.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
gdr = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "basedpyright>=1.28.0",
    "ruff>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 2

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument (common in callbacks)
    "B904",   # raise ... from err (too strict for this project)
    "SIM",    # simplification suggestions (can reduce readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ARG",    # unused arguments are common in test fixtures
    "SIM",    # simplification not always better in tests
]

[tool.ruff.lint.isort]
known-first-party = ["auth", "cdp", "chat", "cli", "config", "exceptions", "repl", "research"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# BasedPyright configuration
[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportUndefinedVariable = "error"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "warning"
reportPrivateImportUsage = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportDuplicateImport = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportWildcardImportFromLibrary = "error"
reportOptionalCall = "none"
reportOptionalIterable = "none"
reportOptionalMemberAccess = "none"
reportOptionalOperand = "none"
reportOptionalContextManager = "none"
reportShadowingOverrides = "warning"
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportGeneralTypeIssues = "warning"
exclude = [
    ".venv",
    ".pytest_cache",
    "uv.lock",
]
ignore = [
    "src/cli.py",           # complex CLI with dynamic imports
    "tests/test_cli.py",    # test mocks trigger false positives
    "src/cdp.py",           # CDP type hints are incompatible with basedpyright
]
